--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,10 @@
             <!--Menu-->
             <ul class="list">
                 <li>
-                    <a href="index.html" class="link header-nav-link active">Studio</a>
+                    <a href="index.html" class="link header-nav-link">Studio</a>
                 </li>
                 <li>
-                    <a href="portfolio.html" class="link header-nav-link">Portfolio</a>
+                    <a href="portfolio.html" class="link header-nav-link active">Portfolio</a>
                 </li>
                 <li>
                     <a href="#contacts" class="link header-nav-link active-cntc">Contacts</a>
