--- a/portfolio.html
+++ b/portfolio.html
@@ -56,10 +56,19 @@
 
     <section class="portfolio-images">
         <ul class="portfolio-images-top container">
-            <li>
-                <img src="./images/interface.jpg" width="360" height="300" alt="banking app interface concept">
-                <h3 class="portfolio-title">Banking App Interface Concept</h3>
-                <p>App</p>
+            <li class="project">
+                <div class="project-image">
+                    <img src="./images/interface.jpg" width="360" height="300" alt="banking app interface concept">
+                        <div class="project-image-caption">
+                            <p class="project-image-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt eos facere placeat rem repellat eius quos rerum vel perspiciatis, obcaecati saepe officia minima aliquam qui nostrum aperiam eveniet dolorem.
+                            </p>
+                        </div>
+                </div>
+                <div>
+                    <h3 class="portfolio-title">Banking App Interface Concept</h3>
+                    <p>App</p>
+                </div>
             </li>
 
             <li>
