--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="css/styles.css"/>
-    <link rel="stylesheet" href="css/modern-normalize.css" />
+    <link rel="stylesheet" href="css/modern-normalize.css"/>
 </head>
 <body class="main-page">
-    
         <header class="inline">
             <!--Logo-->
             <nav>
@@ -47,10 +46,19 @@
         <main>
             <!--Hero Section or Main landing page-->
            <section class="hero">
-            <h1 class="hero-text">Effective Solutions<br>
-                for Your Business
-            </h1>
-            <button type="button" class="hero-button">Order Service</button>
+                <h1 class="hero-text">Effective Solutions<br>
+                    for Your Business
+                </h1>
+                <button type="button" class="hero-button" data-modal-open>Order Service</button>
+                <div class="backdrop is-hidden" data-modal>
+                    <div class="modal">
+                        <button type="button" class="modal-close-button" data-modal-close>
+                            <svg width="18" height="18">
+                                <use href="./images/icons.svg#close"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
            </section>
            <!--Component Section-->
            <section class="component">
@@ -342,5 +350,6 @@
             </section>
             </div>
         </Footer>
+        <script src="./js/modal.js" type="text/javascript"></script>
 </body>
 </html>
