--- a/portfolio.html
+++ b/portfolio.html
@@ -71,54 +71,134 @@
                 </div>
             </li>
 
-            <li>
-                <img src="./images/qrcode.jpg" width="360" height="300" alt="cashless payment">
-                <h3 class="portfolio-title">Cashless Payment</h3>
-                <p>Marketing</p>
+            <li class="project">
+                <div class="project-image">
+                    <img src="./images/qrcode.jpg" width="360" height="300" alt="cashless payment">
+                        <div class="project-image-caption">
+                            <p class="project-image-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt eos facere placeat rem repellat eius quos
+                                rerum vel perspiciatis, obcaecati saepe officia minima aliquam qui nostrum aperiam eveniet dolorem.
+                            </p>
+                        </div>
+                </div>
+                <div>
+                    <h3 class="portfolio-title">Cashless Payment</h3>
+                    <p>Marketing</p>
+                </div>
             </li>
 
-            <li>
-                <img src="./images/laptop.jpg" width="360" height="300" alt="mediation app">
-                <h3 class="portfolio-title">Mediation App</h3>
-                <p>App</p>
+            <li class="project">
+                <div class="project-image">
+                    <img src="./images/laptop.jpg" width="360" height="300" alt="mediation app">
+                        <div class="project-image-caption">
+                            <p class="project-image-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt eos facere placeat rem repellat eius quos
+                                rerum vel perspiciatis, obcaecati saepe officia minima aliquam qui nostrum aperiam eveniet dolorem.
+                            </p>
+                        </div>
+                </div>
+                <div>
+                    <h3 class="portfolio-title">Mediation App</h3>
+                    <p>App</p>
+                </div>
             </li>
         </ul>
         <ul class="portfolio-images-mid container">
-            <li>
-                <img src="./images/steeringwheel.jpg" width="360" height="300" alt="taxi service">
-                <h3 class="portfolio-title">Taxi Service</h3>
-                <p class="portfolio-subtitle">Marketing</p>
+            <li class="project">
+                <div class="project-image">
+                    <img src="./images/steeringwheel.jpg" width="360" height="300" alt="taxi service">
+                        <div class="project-image-caption">
+                            <p class="project-image-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt eos facere placeat rem repellat eius quos
+                                rerum vel perspiciatis, obcaecati saepe officia minima aliquam qui nostrum aperiam eveniet dolorem.
+                            </p>
+                        </div>
+                </div>
+                <div>
+                    <h3 class="portfolio-title">Taxi Service</h3>
+                    <p class="portfolio-subtitle">Marketing</p>
+                </div>
             </li>
 
-            <li>
-                <img src="./images/cellphone.jpg" width="360" height="300" alt="screen illustrations">
-                <h3 class="portfolio-title">Screen Illustrations</h3>
-                <p class="portfolio-subtitle">Design</p>
+            <li class="project">
+                <div class="project-image">
+                    <img src="./images/cellphone.jpg" width="360" height="300" alt="screen illustrations">
+                        <div class="project-image-caption">
+                            <p class="project-image-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt eos facere placeat rem repellat eius quos
+                                rerum vel perspiciatis, obcaecati saepe officia minima aliquam qui nostrum aperiam eveniet dolorem.
+                            </p>
+                        </div>
+                </div>
+                <div>
+                    <h3 class="portfolio-title">Screen Illustrations</h3>
+                    <p class="portfolio-subtitle">Design</p>
+                </div>
             </li>
 
-            <li>
-                <img src="./images/smile.jpg" width="360" height="300" alt="online courses">
-                <h3 class="portfolio-title">Online Courses</h3>
-                <p class="portfolio-subtitle">Marketing</p>
+            <li class="project">
+                <div class="project-image">
+                    <img src="./images/smile.jpg" width="360" height="300" alt="online courses">
+                        <div class="project-image-caption">
+                            <p class="project-image-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt eos facere placeat rem repellat eius quos
+                                rerum vel perspiciatis, obcaecati saepe officia minima aliquam qui nostrum aperiam eveniet dolorem.
+                            </p>
+                        </div>
+                </div>
+                <div>
+                    <h3 class="portfolio-title">Online Courses</h3>
+                    <p class="portfolio-subtitle">Marketing</p>
+                </div>
             </li>
         </ul>
         <ul class="portfolio-images-btm container">
-            <li>
-                <img src="./images/concept.jpg" width="360" height="300" alt="instagram stories concept">
+            <li class="project">
+                <div class="project-image">
+                    <img src="./images/concept.jpg" width="360" height="300" alt="instagram stories concept">
+                        <div class="project-image-caption">
+                            <p class="project-image-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt eos facere placeat rem repellat eius quos
+                                rerum vel perspiciatis, obcaecati saepe officia minima aliquam qui nostrum aperiam eveniet dolorem.
+                            </p>
+                        </div>
+            </div>
+            <div>
                 <h3 class="portfolio-title">Instagram Stories Concept</h3>
                 <p class="portfolio-subtitle">Design</p>
+            </div>
             </li>
 
-            <li>
-                <img src="./images/fruits.jpg" width="360" height="300" alt="organic food">
-                <h3 class="portfolio-title">Organic Food</h3>
-                <p class="portfolio-subtitle">Web Site</p>
+            <li class="project">
+                <div class="project-image">
+                    <img src="./images/fruits.jpg" width="360" height="300" alt="organic food">
+                        <div class="project-image-caption">
+                            <p class="project-image-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt eos facere placeat rem repellat eius quos
+                                rerum vel perspiciatis, obcaecati saepe officia minima aliquam qui nostrum aperiam eveniet dolorem.
+                            </p>
+                        </div>
+                </div>
+                <div>
+                    <h3 class="portfolio-title">Organic Food</h3>
+                    <p class="portfolio-subtitle">Web Site</p>
+                </div>
             </li> 
 
-            <li>
-                <img src="./images/coffee.jpg" width="360" height="300" alt="fresh coffee">
+            <li class="project">
+                <div class="project-image">
+                    <img src="./images/coffee.jpg" width="360" height="300" alt="fresh coffee">
+                        <div class="project-image-caption">
+                            <p class="project-image-text">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis sunt eos facere placeat rem repellat eius quos
+                                rerum vel perspiciatis, obcaecati saepe officia minima aliquam qui nostrum aperiam eveniet dolorem.
+                            </p>
+                        </div>
+            </div>
+            <div>
                 <h3 class="portfolio-title">Fresh Coffee</h3>
                 <p class="portfolio-subtitle">Web Site</p>
+            </div>
             </li>
         </ul>
     </section>
